--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.20.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.13.2",
+    "identify": "^0.1.5",
     "swiper": "^6.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
